# cmpe-351-data-analytics-group-project

./: .gitignore  LICENSE  README.md  pyproject.toml
data/raw/twitter/: tweets_2022_03_04.csv  tweets_2022_03_05.csv  tweets_2022_03_05_2022_03_11_and_2022_03_28_2022_04_04.csv  tweets_2022_03_06.csv  tweets_2022_03_07.csv  tweets_2022_03_08.csv  tweets_2022_03_09.csv  tweets_2022_03_10.csv  tweets_2022_03_11.csv  tweets_2022_03_12.csv  tweets_2022_03_13.csv  tweets_2022_03_14.csv  tweets_2022_03_15.csv  tweets_2022_04_05_2022_04_07.csv
src/: 2_process_dataset.py
