[project]
dependencies = [
    "cryptocompare==0.7.5",
    "jupyter==1.0.0",
    "matplotlib==3.5.1",
    "missingno==0.5.1",
    "nltk==3.7",
    "numpy==1.22.3",
    "openpyxl==3.0.9",
    "pandas==1.4.2",
    "pyqt6>=6.7.1",
    "python-dotenv==0.20.0",
    "salib==1.4.5",
    "scikit-learn==1.0.2",
    "scipy==1.8.0",
    "seaborn==0.11.2",
    "statsmodels==0.13.2",
    "tensorflow==2.8.1",
    "textblob==0.17.1",
    "twython==3.9.1",
]
name = "cmpe-351-project"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "jupytext>=1.16.4",
    "ruff>=0.8.2",
]
